compiler/kernc_cli/tests/soundness/reject/coherence/unconstrained_trait_impl_generic_does_not_enable_method_dispatch.kn
// source: impl-local generics that stay unsolved must not leak trait methods onto the receiver
// stderr: no field or method named `ping` found on type `X`

trait Marker {
    fn ping() i32;
};

struct X {};

impl[T] X: Marker {
    fn ping() i32 {
        return 7;
    }
}

fn main() i32 {
    let x = X.{};
    return x.ping();
}
